syntax = "proto3";

package com.zen.grpc.nodejs.user.service;

service UserService {
  rpc getBasic (FindOneDto) returns (BasicUserResponse) {}
}

message FindOneDto {
  int32 id = 1;
}


message Empty {}

message BaseResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

// >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> GET_BASIC <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
message BasicUserResponse {
  int32 status = 1;
  string message = 2;
  BasicUserDataResponse data = 3;
}

message BasicUserDataResponse {
  int32 id = 1;
  string nick_name = 2;
  string avatar = 3;
}
// >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> GET_BASIC <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
